apps/searxng/overlay/korriban/istio-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: searxng
  namespace: searxng
spec:
  hosts:
    - "search.home.cwbtech.net"
  gateways:
    - istio-system/public-gw
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: searxng.searxng.svc.cluster.local
            port:
              number: 8080
      timeout: 10s
      retries:
        attempts: 2
        perTryTimeout: 5s
      headers:
        request:
          set:
            X-Forwarded-Proto: "https"
            X-Forwarded-Host: "search.home.cwbtech.net"
